# volumfeapy

./: .gitignore  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
casestudies/: common.py  cs01_cube_uniaxial.py  cs02_cantilever_3d.py  cs03_hydrostatic_cube.py  cs04_kirsch_plate.py  cs05_body_force.py  cs06_thermal.py  cs07_patch_test.py  cs08_element_convergence.py  cs09_modal_cube.py  cs10_pyramid_element.py  cs11_mixed_elements.py  cs12_chimney.py  cs13_box_girder.py  run_all.py
docs/: _config.yml  en-01-installation.md  en-02-quick-start.md  en-03-structural-model.md  en-04-element-types.md  en-05-loads.md  en-06-supports.md  en-07-solution.md  en-08-post-processing.md  en-09-plotly-charts.md  en-10-modal-analysis.md  en-11-conventions.md  en-12-api-reference.md  en-13-testing-validation.md  en-14-usage-examples.md  en-15-web-ui.md  en-16-shape-functions.md  en-17-mesh-generation.md  en.md  index.md  it-01-installation.md  it-02-quick-start.md  it-03-structural-model.md  it-04-element-types.md  it-05-loads.md  it-06-supports.md  it-07-solution.md  it-08-post-processing.md  it-09-plotly-charts.md  it-10-modal-analysis.md  it-11-conventions.md  it-12-api-reference.md  it-13-testing-validation.md  it-14-usage-examples.md  it-15-web-ui.md  it-16-shape-functions.md  it-17-mesh-generation.md  it.md
docs/casestudies/: cs01-cube-uniaxial.md  cs02-cantilever-3d.md  cs03-hydrostatic-cube.md  cs04-kirsch-plate.md  cs05-body-force.md  cs06-thermal.md  cs07-patch-test.md  cs08-element-convergence.md  (+6 more)
examples/: ex01_uniaxial_hex8.py  ex02_cantilever_tet4.py  ex03_gmsh_box_tet.py
scripts/: generate_doc_images.py
tests/: test_meshing.py  test_solid.py
usage_examples/: 01_convergence_hex8.py  02_cantilever_convergence.py
validation/: validate_hex8_tension.py
volumfeapy/: __init__.py  element.py  integration.py  loads.py  material.py  model.py  node.py  postprocess.py
(+4 files in other folders)
