[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volumfeapy"
version = "0.1.0"
description = "FEM 3D solid solver: hexahedral, tetrahedral, wedge and pyramid elements, body/thermal/gravity loads, modal analysis, Plotly visualization"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Domenico Gaudioso" }]
keywords = ["FEM", "solid", "brick", "tetrahedron", "hexahedron", "3D", "structural", "finite-element"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
plot = ["plotly>=6.1.1", "kaleido>=1.0"]
mesh = ["gmsh>=4.11"]
all = ["plotly>=6.1.1", "kaleido>=1.0", "gmsh>=4.11"]
dev = ["pytest>=7.0", "plotly>=6.1.1", "kaleido>=1.0", "gmsh>=4.11"]

[project.urls]
Homepage = "https://github.com/DomenicoGaudioso/volumfeapy"
Repository = "https://github.com/DomenicoGaudioso/volumfeapy"
Documentation = "https://github.com/DomenicoGaudioso/volumfeapy#readme"
Issues = "https://github.com/DomenicoGaudioso/volumfeapy/issues"

[tool.setuptools.packages.find]
include = ["volumfeapy*"]

[tool.setuptools.package-data]
volumfeapy = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
